fix: end title align

--- a/packages/audiopost-design/src/stylesheets/components/_hero.scss
+++ b/packages/audiopost-design/src/stylesheets/components/_hero.scss
@@ -40,7 +40,8 @@
     }
 
     .hero__title {
-      align-self: flex-end;
+      flex: 1;
+      text-align: right;
     }
   }
 
